--- a/template/index.html
+++ b/template/index.html
@@ -8,7 +8,11 @@
 		<form action="/your-url/" method="post">
 			<label for="your_name">Your name: </label>
 			<input id="your_name" type="text" name="your_name" maxlength="100">
+
+			<!-- the g-recaptcha div-->
 			<div class="g-recaptcha" data-sitekey="<Your site key Here>"></div>
+
+
 			<input type="submit" value="Submit" />
 		</form>
 	</body>
